# vendor_oniro

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md
hybris_generic/: bundle.json  config.json  product.gni
hybris_generic/custom_conf/bootanimation/: BUILD.gn  bootanimation_custom_config.json
hybris_generic/custom_conf/power_config/: BUILD.gn
hybris_generic/custom_conf/window/: BUILD.gn  display_manager_config.xml
hybris_generic/etc/: BUILD.gn
hybris_generic/etc/fstab/: fstab.x23
hybris_generic/etc/init/: init.x23.cfg  init.x23.usb.cfg
hybris_generic/etc/param/: hybris_native.para  product_hybris_generic.para
hybris_generic/etc/ueventd/: ueventd.config
hybris_generic/hals/audio/: BUILD.gn  alsa_adapter.json  alsa_paths.json  product.gni
hybris_generic/hals/codec/: BUILD.gn
hybris_generic/hdf_config/khdf/platform/: a311d_watchdog_config.hcs
hybris_generic/hdf_config/khdf/sensor/humidity/: humidity_aht20_config.hcs
hybris_generic/hdf_config/uhdf/: BUILD.gn  device_info.hcs
hybris_generic/hdf_config/uhdf/camera/hdi_impl/: camera_host_config.hcs
hybris_generic/preinstall-config/: BUILD.gn  install_list.json
hybris_generic/preinstall-config/haps/: oniro-appstore.hap
hybris_generic/resourceschedule/: BUILD.gn
oniro-haps/: BUILD.gn  README.md  build-oniro-haps.sh  oniro-haps.json
oniro-haps/haps/: .gitignore
oniro-haps/patches/: 0001-hap-add-oniro_ui_flavor-switch.patch
qemu/: config.json  ohos.build
qemu/audio/: BUILD.gn
qemu/bluetooth/: BUILD.gn
qemu/custom_conf/bootanimation/: BUILD.gn
qemu/custom_conf/disp_power/: BUILD.gn
qemu/custom_conf/power_config/: BUILD.gn
qemu/custom_conf/window/: BUILD.gn
qemu/default_app_config/: BUILD.gn
qemu/etc/: BUILD.gn
qemu/etc/para/: product_qemu.para
qemu/hdf_config/khdf/sensor/humidity/: humidity_sht30_config.hcs
qemu/hdf_config/uhdf/: BUILD.gn
qemu/preinstall-config/: BUILD.gn
qemu/resourceschedule/: BUILD.gn
qemu/sample/gpio/: BUILD.gn
std_emulator/: bundle.json  config.json  product.gni
std_emulator/default_app_config/: BUILD.gn
std_emulator/etc/: BUILD.gn
std_emulator/hals/audio/: BUILD.gn
std_emulator/hals/codec/: BUILD.gn
std_emulator/hdf_config/khdf/: Makefile  hdf.hcs
std_emulator/hdf_config/khdf/device_info/: device_info.hcs
std_emulator/hdf_config/uhdf/: BUILD.gn
std_emulator/hook/: hook_end.sh  hook_start.sh  undo_patch.sh
std_emulator/hook/patches/: do_patch.sh  undo_patch.sh
std_emulator/hook/patches/arkcompiler/runtime_core/: 0001-OHPC-X86.patch  runtime_core_20250731202113.patch
std_emulator/hook/patches/developtools/hdc/: 0001-tcp-hdc.patch
std_emulator/hook/patches/developtools/integration_verification/: 0001-OHPC-X86.patch  integration_verification_20250731202113.patch
std_emulator/hook/patches/developtools/profiler/: 0001-OHPC-X86.patch  profiler_20250731202113.patch
std_emulator/hook/patches/drivers/external_device_manager/: external_device_manager_20250731202113.patch
std_emulator/hook/patches/drivers/interface/: 0001-Revert-vdi-5.0.2.patch  0001-display.patch  interface_20250731202113.patch  interface_20251007195013.patch
std_emulator/hook/patches/drivers/peripheral/: 0001-OHPC-X86.patch  0001-Revert-vdi-5.0.2.patch
std_emulator/power_config/: BUILD.gn
std_emulator/preinstall-config/: BUILD.gn
std_emulator/resourceschedule/: BUILD.gn
std_emulator/window_config/: BUILD.gn
x23/: config.json  ohos.build  product.gni
x23/audio/: BUILD.gn
x23/custom_conf/bootanimation/: BUILD.gn
x23/custom_conf/disp_power/: BUILD.gn
x23/custom_conf/power_config/: BUILD.gn
x23/custom_conf/window/: BUILD.gn
x23/default_app_config/: BUILD.gn
x23/etc/: BUILD.gn
x23/etc/para/: product_x23.para
x23/hdf_config/khdf/platform/: a311d_uart_config.hcs
x23/hdf_config/khdf/sensor/temperature/: temperature_aht20_config.hcs  temperature_sht30_config.hcs
x23/hdf_config/khdf/wifi/: wlan_chip_rtl8822cs.hcs
x23/hdf_config/uhdf/: device_info.hcs
x23/preinstall-config/: BUILD.gn
x23/resourceschedule/: BUILD.gn
x23/security_config/: high_privilege_process_list.json
x86_general/: bundle.json  config.json  product.gni  qemu_x86_run_windows.ps1
x86_general/custom_conf/: BUILD.gn
x86_general/custom_conf/bootanimation/: BUILD.gn
x86_general/custom_conf/power_config/: BUILD.gn
x86_general/custom_conf/window/: BUILD.gn  display_manager_config.xml  window_manager_config.xml
x86_general/default_app_config/: BUILD.gn  bundle.json
x86_general/etc/: BUILD.gn
x86_general/etc/para/: hardware_x86_general.para  product_x86_general.para
x86_general/hals/audio/: BUILD.gn  alsa_adapter.json  product.gni
x86_general/hals/audio/config/: audio_policy_config.xml
x86_general/hals/codec/: BUILD.gn
x86_general/hdf_config/uhdf/: BUILD.gn
x86_general/hook/: .gitignore  do_patch.sh  generate_patches.sh  undo_patch.sh
x86_general/hook/patches/arkcompiler/runtime_core/: 0001-runtime_core-x86_64-codegen-support-asmjit-zydis-dep.patch  runtime_core_20260406210317.patch
x86_general/hook/patches/developtools/integration_verification/: 0001-deps_guard-alias-ld-musl-arm-aarch64-x86_64-riscv64-.patch  0002-deps_guard-whitelist-Oniro-x86-GPU-vendor-libs-and-E.patch
x86_general/hook/patches/developtools/profiler/: 0001-profiler-x86_64-support-for-native_daemon-unwind-and.patch  profiler_20251007195011.patch  profiler_20260406210208.patch
x86_general/hook/patches/drivers/peripheral/: peripheral_20260406210209.patch  (+1 more)
x86_general/image_conf/: BUILD.gn  ramdisk_image_conf.txt  system_image_conf.txt  userdata_image_conf.txt  vendor_image_conf.txt
x86_general/patches/: patch.sh
x86_general/patches/arkcompiler/runtime_core/: 0001-OHPC-X86.patch
x86_general/patches/developtools/integration_verification/: 0001-OHPC-X86.patch
x86_general/patches/developtools/profiler/: 0001-OHPC-X86.patch
x86_general/patches/drivers/external_device_manager/: 0001-OHPC-X86.patch
x86_general/patches/drivers/peripheral/: 0001-OHPC-X86.patch
x86_general/preinstall-config/: BUILD.gn
x86_general/resourceschedule/: BUILD.gn
(+73 files in other folders)
