# Copyright (c) 2026 Eclipse Oniro for OpenHarmony contributors.
# SPDX-License-Identifier: Apache-2.0
#
# Oniro distribution-flavor HAP set (the "oniro_ui_flavor == oniro" content).
#
# oniro-haps.json is the single source of truth for the HAP set: one
# ohos_prebuilt_etc target is generated below for every module of every app in
# the descriptor (read_file is gn-gen-time and, unlike exec_script, not gated
# by the //.gn allowlist). These targets install the Oniro-customized system
# HAPs that the stock applications/standard/hap targets are swapped out for
# when the Oniro UI flavor is selected. part_name/subsystem deliberately stay
# "prebuilt_hap"/"applications" so these targets belong to the same part as
# the stock HAPs they replace.
#
# The HAP binaries under haps/ are NOT committed — they are produced on demand
# by the colocated build-oniro-haps.sh (which clones each app from its pinned
# remote in oniro-haps.json). If they are missing when the Oniro flavor is
# selected, ninja fails on the missing prebuilt_etc `source` input — run
# vendor/oniro/oniro-haps/build-oniro-haps.sh first (see README.md).

import("//build/ohos.gni")

declare_args() {
  # Include the descriptor's `optional` apps (currently only the FlorisBoard
  # IME) in the Oniro custom HAP set. Requires their HAPs to have been produced
  # by build-oniro-haps.sh (set to false, and pass `--skip florisboard` to the
  # driver, to omit them).
  oniro_include_florisboard = true
}

_desc = read_file("oniro-haps.json", "json")

_hap_targets = []
foreach(app, _desc.apps) {
  _include = true
  if (defined(app.optional) && app.optional) {
    _include = oniro_include_florisboard
  }
  if (_include) {
    foreach(mod, app.modules) {
      _name = string_replace(mod.dest, ".hap", "_hap")
      ohos_prebuilt_etc(_name) {
        source = "haps/" + mod.dest
        module_install_dir = mod.install_dir
        part_name = "prebuilt_hap"
        subsystem_name = "applications"
      }
      _hap_targets += [ ":" + _name ]
    }
  }
}

group("oniro_custom_haps") {
  deps = _hap_targets
}
