# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_prebuilt_etc("para_for_chip_prod") {
  source = "./param/hardware_hybris_generic.para"
  install_images = [ chip_prod_base_dir ]
  relative_install_dir = "param"
  part_name = "product_hybris_generic"
}

ohos_prebuilt_etc("para_for_sys_prod") {
  source = "./param/product_hybris_generic.para"
  install_images = [ sys_prod_base_dir ]
  relative_install_dir = "param"
  part_name = "product_hybris_generic"
}

# Phase N2.6 — Vendor-partition ueventd overlay. Loaded by ueventd from
# /vendor/etc/ueventd.config (see base/startup/init/ueventd/ueventd_main.c:78-79).
# Adds Mali GPU, DMA-BUF heaps, input perms, ALSA, rfkill — every node libhybris
# bridges to that the LXC build was previously bind-mounting from the host.
ohos_prebuilt_etc("ueventd_config_vendor") {
  source = "./ueventd/ueventd.config"
  install_images = [ vendor_base_dir ]
  part_name = "product_hybris_generic"
}

# Phase N3.1 — Volla X23 fstab for non-required (second-stage) mounts.
# Required mounts (system/vendor/userdata) come from kernel cmdline
# ohos.required_mount.* set by kernel/x23/build_boot_img_ohos.sh.
# Loaded by mount_fstab_sp from /vendor/etc/fstab.${ohos.boot.hardware}.
ohos_prebuilt_etc("fstab_x23") {
  source = "./fstab/fstab.x23"
  install_images = [ vendor_base_dir ]
  part_name = "product_hybris_generic"
}

# Phase N3.3 — Volla X23 vendor init.cfg overlay imported by /system/etc/init.cfg
# (line 5: "/vendor/etc/init.${ohos.boot.hardware}.cfg"). Runs binderfs mount,
# /android mount-tree pre-creation, rfkill unblock, USB controller setup.
ohos_prebuilt_etc("init_x23_cfg") {
  source = "./init/init.x23.cfg"
  install_images = [ vendor_base_dir ]
  part_name = "product_hybris_generic"
}

# Phase N7.1 — USB gadget controller wiring for hdc-over-USB.
# Imported by /system/etc/init.usb.cfg via /vendor/etc/init.${ohos.boot.hardware}.usb.cfg.
ohos_prebuilt_etc("init_x23_usb_cfg") {
  source = "./init/init.x23.usb.cfg"
  install_images = [ vendor_base_dir ]
  part_name = "product_hybris_generic"
}

# Phase N7.2 — Native-boot param overrides (HDC over USB, developer mode on).
ohos_prebuilt_etc("hybris_native_para") {
  source = "./param/hybris_native.para"
  install_images = [ sys_prod_base_dir ]
  relative_install_dir = "param"
  part_name = "product_hybris_generic"
}

group("product_etc_conf") {
  deps = [
    ":para_for_chip_prod",
    ":para_for_sys_prod",
    ":ueventd_config_vendor",
    ":fstab_x23",
    ":init_x23_cfg",
    ":init_x23_usb_cfg",
    ":hybris_native_para",
  ]
}
